infrastructure/platform/goldilocks/namespace-default.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
    goldilocks.fairwinds.com/vpa-update-mode: 'Off'
    kubernetes.io/metadata.name: default
