infrastructure/platform/goldilocks/deployment-kube-system-goldilocks-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goldilocks
  name: goldilocks-controller
  namespace: kube-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: goldilocks
      component: controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: goldilocks
        component: controller
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --on-by-default=false
        - --exclude-namespaces=kube-system,kube-public,kube-node-lease
        - -v=2
        command:
        - /goldilocks
        - controller
        image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks:v4.14.18
        imagePullPolicy: IfNotPresent
        name: goldilocks
        resources:
          limits:
            cpu: '1'
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10324
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: goldilocks
      serviceAccountName: goldilocks
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
