infrastructure/platform/goldilocks/deployment-kube-system-goldilocks-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: goldilocks
  name: goldilocks-dashboard
  namespace: kube-system
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: goldilocks
      component: dashboard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: goldilocks
        component: dashboard
    spec:
      automountServiceAccountToken: true
      containers:
      - command:
        - /goldilocks
        - dashboard
        - --port=8080
        image: us-docker.pkg.dev/fairwinds-ops/oss/goldilocks
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: goldilocks
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 25m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10324
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: goldilocks
      serviceAccountName: goldilocks
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
