infrastructure/platform/goldilocks/service-kube-system-goldilocks-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goldilocks
  name: goldilocks-dashboard
  namespace: kube-system
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: goldilocks
    component: dashboard
  sessionAffinity: None
  type: ClusterIP
